"Fixed navbar alignment"

--- a/wolf-home-repair/styles.css
+++ b/wolf-home-repair/styles.css
@@ -8,6 +8,7 @@ body {
   text-align: right;
   border: solid;
   padding: 20px;
+  padding-bottom: 80px;
   font-size: 32px;
   margin-bottom: 30px;
 }
@@ -29,10 +30,8 @@ body {
 }
 
 #mynavbar {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 20px 30px;
+  float: left;
 }
 
 .navbuttons {
